Add missing typename to operator assign

--- a/sycl/doc/extensions/proposed/sycl_ext_oneapi_complex.asciidoc
+++ b/sycl/doc/extensions/proposed/sycl_ext_oneapi_complex.asciidoc
@@ -118,23 +118,23 @@ namespace oneapi {
             /*Complex operators*/
 
             // operator=
-            template<X>
+            template<typename X>
             complex& operator+=(const complex<X>&);
 
             // operator+=
-            template<X>
+            template<typename X>
             complex& operator+=(const complex<X>&);
 
             // operator-=
-            template<X>
+            template<typename X>
             complex& operator-=(const complex<X>&);
 
             // operator*=
-            template<X>
+            template<typename X>
             complex& operator*=(const complex<X>&);
 
             // operator/=
-            template<X>
+            template<typename X>
             complex& operator/=(const complex<X>&);
 
             /*Scalar operators*/
